force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>One line of labor for cost development and billing analysis.</description>
    <label>CD Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD Time Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>