force-app/main/default/objects/Time_Entry__c/fields/Extended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount__c</fullName>
    <description>Hours times applied rate when a rate exists.</description>
    <formula>IF(ISBLANK(Rate_Applied__c), NULL, Hours__c * Rate_Applied__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>