force-app/main/default/objects/Time_Entry__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Billable or actual hours for this line.</description>
    <label>Hours</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>