force-app/main/default/objects/Time_Entry__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <description>Role used for this line; drives rate lookup with offering and labor pool.</description>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Role</valueSetName>
    </valueSet>
</CustomField>