force-app/main/default/objects/Time_Entry__c/fields/Labor_Pool__c.field-meta.xml
<CustomField>
    <fullName>Labor_Pool__c</fullName>
    <description>Operations vs overhead for reporting and rates.</description>
    <label>Labor Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Labor_Pool</valueSetName>
    </valueSet>
</CustomField>