force-app/main/default/objects/Time_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Short narrative of work performed.</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>