force-app/main/default/objects/Time_Entry__c/fields/Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Applied__c</fullName>
    <description>Hourly rate stamped from the active rate card at save time.</description>
    <label>Rate Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>