force-app/main/default/objects/Time_Entry__c/fields/ServiceNow_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Ticket_Number__c</fullName>
    <description>ServiceNow ticket identifier (INC, CHG, RITM, etc.).</description>
    <label>ServiceNow Ticket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>