force-app/main/default/objects/Time_Entry__c/fields/ServiceNow_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Ticket_URL__c</fullName>
    <description>Deep link to the ServiceNow record.</description>
    <label>ServiceNow Ticket URL</label>
    <type>Url</type>
</CustomField>