force-app/main/default/objects/Time_Entry__c/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <description>Type of work performed.</description>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Category</valueSetName>
    </valueSet>
</CustomField>