force-app/main/default/objects/Time_Entry__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <description>Calendar date the work was performed.</description>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>