force-app/main/default/objects/Time_Entry__c/validationRules/Hours_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_must_be_positive</fullName>
    <active>true</active>
    <description>Hours must be greater than zero.</description>
    <errorConditionFormula>OR(ISBLANK(Hours__c), Hours__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Hours must be greater than zero.</errorMessage>
</ValidationRule>