force-app/main/default/objects/Time_Entry__c/listViews/My_Time_Entries.listView-meta.xml
<ListView>
    <fullName>My_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Work_Date__c</columns>
    <columns>Hours__c</columns>
    <columns>Task_Category__c</columns>
    <columns>Job_Role__c</columns>
    <columns>Labor_Pool__c</columns>
    <columns>ServiceNow_Ticket_Number__c</columns>
    <columns>Rate_Applied__c</columns>
    <columns>Extended_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Time Entries</label>
</ListView>